--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutter_sensors
 description: A flutter plugin to access the available sensors of the device.
-version: 1.0.0
+version: 1.0.1
+homepage: https://github.com/LJaraCastillo/native_video_view
 repository: https://github.com/LJaraCastillo/native_video_view
 
 environment:
